--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://localhost:4000
+url: https://weplot.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -106,8 +106,9 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: # 将在后续配置GitHub仓库时填写
-  branch: gh-pages
+  repo: https://github.com/WePlot/WePlot.github.io.git
+  branch: main
+  token: ${{ secrets.DEPLOY_TOKEN }}
 
 # Search
 search:
