fix: 修复 GitHub Actions Git 错误和简化构建流程

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
           
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -32,31 +30,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Verify and setup theme
-        run: |
-          echo "Checking themes directory..."
-          ls -la themes/ || echo "Themes directory not found"
-          
-          echo "Checking for butterfly theme..."
-          if [ ! -d "themes/butterfly" ]; then
-            echo "Butterfly theme directory not found"
-            echo "Checking npm packages..."
-            npm list | grep butterfly || echo "No butterfly npm package found"
-            
-            # 如果主题目录不存在，尝试从 node_modules 复制或创建链接
-            if [ -d "node_modules/hexo-theme-butterfly" ]; then
-              echo "Found butterfly in node_modules, creating symlink..."
-              ln -sf ../node_modules/hexo-theme-butterfly themes/butterfly
-            fi
-          fi
-          
-          echo "Final themes directory check:"
-          ls -la themes/
-        
       - name: Build site
         run: |
           npx hexo clean
           npx hexo generate
+          
+      - name: Verify build
+        run: |
+          echo "Checking public directory..."
+          ls -la public/ || echo "Public directory not found"
+          echo "Checking index.html size..."
+          ls -la public/index.html || echo "index.html not found"
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
