--- a/_config.next.yml
+++ b/_config.next.yml
@@ -42,7 +42,7 @@ avatar:
 # 社交链接
 social:
   GitHub: https://github.com/weplot || fab fa-github
-  E-Mail: mailto:your-email@example.com || fa fa-envelope
+  E-Mail: mailto:980419282@qq.com || fa fa-envelope
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
   #Twitter: https://twitter.com/yourname || fab fa-twitter
