--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: WePlot
 subtitle: '个人技术博客'
-description: '基于Hexo的个人博客系统'
+description: '个人技术博客'
 keywords: 技术, 博客, 编程, 学习笔记
-author: WePlot Admin
+author: Wesley
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
